--- a/react-shop/package.json
+++ b/react-shop/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://xaletch.github.io/Online-shop",
+  "homepage": "https://xaletch.github.io/react-shop",
   "name": "react-shop",
   "version": "0.1.0",
   "private": true,
@@ -28,7 +28,7 @@
   },
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -b master -d build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -51,5 +51,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^5.0.0"
   }
 }
